kubeflow-base/delete-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubeflow
$patch: delete
---
apiVersion: v1
kind: Namespace
metadata:
  name: kubeflow-system
$patch: delete
